# ineedideas

./: .gitignore  CMakeLists.txt  README.md  main.c  words.h
include/: words.h
src/: CMakeLists.txt  main.c
